--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: "Set hostname"
+  hostname:
+    name: "{{ hostname|quote }}"
+    use: systemd
+  tags: hostname
+
 - name: Set same timezone on every Server
   community.general.timezone:
     name: "{{ system_timezone }}"
