--- a/site.yml
+++ b/site.yml
@@ -63,6 +63,6 @@
     - name: Copying kubeconfig from {{ hostvars[groups[group_name_master | default('master')][0]]['ansible_hostname'] }}
       ansible.builtin.fetch:
         src: "{{ ansible_user_dir }}/.kube/config"
-        dest: ./kubeconfig
+        dest: "{{ lookup('env','HOME') }}/.kube/config"
         flat: true
       when: ansible_hostname == hostvars[groups[group_name_master | default('master')][0]]['ansible_hostname']
